# libprettyerr

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  requirements.txt
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
img/: .code
src/: CMakeLists.txt  prettyerr.h
src/example/: CMakeLists.txt
src/internal/: error.c  error.h
src/termcolor/: CMakeLists.txt
